Add back all the other changes and see if it still works.